# Sandbox

./: .gitignore  CMakeLists.txt  SandboxConfig.h  SandboxConfig.h.in  main.cpp
AmazonAws/: setup
AmazonAws/client/AmazonAwsClient/: package-lock.json  package.json
AmazonAws/client/AmazonAwsClient/amplify/.config/: project-config.json
AmazonAws/client/AmazonAwsClient/src/: index.html
AmazonAws/client/AmazonAwsClient/src/app/: app.module.ts
AmazonAws/client/AmazonAwsClient/src/app/aws/: aws-s3-credentials.service.spec.ts
Angular/svg-canvas-tutorial/: .editorconfig  README.md  package-lock.json  package.json
Angular/svg-canvas-tutorial/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
Angular/svg-canvas-tutorial/src/app/app-module/: app.component.ts  app.module.ts
Angular/svg-canvas-tutorial/src/app/canvas/: canvas.module.ts
Angular/svg-canvas-tutorial/src/app/canvas/classes/: line.ts  path.ts  point.ts
Angular/svg-canvas-tutorial/src/app/svg/: svg.module.ts
Angular/three-js-tutorial/: package-lock.json  package.json  tslint.json
Angular/three-js-tutorial/e2e/: app.e2e-spec.ts
Angular/three-js-tutorial/src/app/: app.component.html
Angular/three-js-tutorial/src/app/components/simple-scene/: simple-scene.component.html  simple-scene.component.spec.ts  simple-scene.component.ts
OpenGL/: CMakeLists.txt
OpenGL/src/: CMakeLists.txt
OpenGL/src/examples/: CMakeLists.txt
OpenGL/src/examples/0_cubic_alien/: CMakeLists.txt
OpenGL/src/examples/1_cubic_alien/: CMakeLists.txt  inf2705.h  main.cpp
SystemC/PersonalTest/: CMakeLists.txt  README.md
SystemC/PersonalTest/src/: CMakeLists.txt
SystemC/PersonalTest/src/1_adder/: CMakeLists.txt  adder.cpp  adder.h  sc_main.cpp  top.h
SystemC/PersonalTest/src/2_ram/: CMakeLists.txt  ram.h  ram_value_generator.h  sc_main.cpp  sc_uint_hash.h  top.h
WebGL/MdnTutorial/: README.md  package-lock.json  package.json  tslint.json
WebGL/MdnTutorial/src/app/: app.module.ts  scene-renderer.ts
WebGL/MdnTutorial/src/app/api/doc/: ShaderSource.mdj
WebGL/MdnTutorial/src/app/api/shaders/: abstract-shader.ts  fragment-shader.ts  shader-program.ts  shader.ts  vertex-shader.ts
WebGL/MdnTutorial/src/app/api/util/: stack.spec.ts  stack.ts
WebGL/MdnTutorial/src/app/canvas/black-canvas/: black-canvas.component.ts
WebGL/MdnTutorial/src/app/scripts/: createOperatorClasses.sh  generateApiShaderInterfaces.sh  generateImplementationShaderClasses.sh
WebGL/MdnTutorial/src/app/shaders/: abstract-shader-program.ts  shader-program.ts
WebGL/MdnTutorial/src/app/shaders/fragment-shaders/: basic-fragment-shader.ts
WebGL/MdnTutorial/src/app/shaders/vertex-shaders/: basic-vertex-shader.ts
WebGL/MdnTutorial/src/app/util/visitor-dispatcher/: visitee.ts  visitor-dispatcher.spec.ts  visitor-dispatcher.ts  visitor.ts
WebGL/MdnTutorial/src/app/webgl/: gl.ts
WebGL/MdnTutorial/src/app/webgl/shaders/: abstract-shader-program.ts  abstract-shader.ts
WebGL/mdnTutorial/: README.md
WebGL/mdnTutorial/src/app/: index.html  index.js  index.ts  tsconfig.json
WebGL/mdnTutorial/src/app/src/: scene-renderer.ts
WebGL/mdnTutorial/src/app/src/shaders/: vertex-shader.ts
angular/angular_tour_of_heroes/: package-lock.json  package.json
angular/angular_tour_of_heroes/src/app/: app.component.html  app.component.ts  app.module.ts
angular/angular_tour_of_heroes/src/app/components/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
angular/angular_tour_of_heroes/src/app/components/hero/: hero.component.html  hero.component.ts
angular/angular_tour_of_heroes/src/app/components/hero-detail/: hero-detail.component.html  hero-detail.component.ts
angular/angular_tour_of_heroes/src/app/components/hero-search/: hero-search.component.html
angular/angular_tour_of_heroes/src/app/modules/: app-routing.module.ts
angular/angular_tour_of_heroes/src/app/services/: hero.service.ts  in-memory-data.service.ts
angular/angular_tour_of_heroes/src/app/storage/: mock-heroes.ts
llvm/kalediscope-tutorial/src/: CMakeLists.txt  main.cpp
llvm/kaleidoscope-tutorial/: README.md
llvm/kaleidoscope-tutorial/src/: CMakeLists.txt  KaleidoscopeJit.h  main.cpp
old/AmazonAws/client/AmazonAwsClient/: .amplifyrc  README.md  angular.json  package-lock.json
old/AmazonAws/client/AmazonAwsClient/amplify/.config/: aws-info.json
old/AmazonAws/client/AmazonAwsClient/amplify/backend/: amplify-meta.json
old/AmazonAws/client/AmazonAwsClient/e2e/src/: app.e2e-spec.ts
old/AmazonAws/client/AmazonAwsClient/src/: aws-exports.js
old/AmazonAws/client/AmazonAwsClient/src/app/: app.component.spec.ts  app.component.ts
old/Angular/angular_tour_of_heroes/: README.md  package.json
old/Angular/angular_tour_of_heroes/src/app/: app.component.ts  app.module.ts
old/Angular/angular_tour_of_heroes/src/app/services/: hero-search.service.ts
old/Angular/svg-canvas-tutorial/: .angular-cli.json  tslint.json
old/Angular/svg-canvas-tutorial/e2e/: app.e2e-spec.ts
old/Angular/svg-canvas-tutorial/src/: index.html
old/Angular/svg-canvas-tutorial/src/app/: app.component.ts
old/Angular/svg-canvas-tutorial/src/app/canvas/: canvas.module.ts
old/Angular/svg-canvas-tutorial/src/app/svg/: svg-style.css
old/Angular/three-js-tutorial/: .angular-cli.json  README.md  package-lock.json  tslint.json
old/Angular/three-js-tutorial/src/: index.html
old/Angular/three-js-tutorial/src/app/: app.component.ts  app.module.ts
old/CMake_Tutorial/: CMakeLists.txt  license.txt  main.cpp
old/CMake_Tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h
old/Flex_Bison_Tutorial/: lex.l
old/OpenGL/src/: CMakeLists.txt
old/OpenGL/src/examples/1_cubic_alien/: touches.txt
old/SystemC/PersonalTest/src/: CMakeLists.txt
old/SystemC/PersonalTest/src/1_adder/: top.h
old/SystemC/PersonalTest/src/2_ram/: CMakeLists.txt  ram_value_generator.h
old/WebGL/MdnTutorial/: README.md
src/: CMakeLists.txt  SandboxConfig.h.in  lex.l  parse.y
src/MathFunctions/: .gitignore  mysqrt.cpp
(+325 files in other folders)
