cmake_minimum_required(VERSION 3.2.0)

project(PersonalTest)

# ==============================================================================
# =                           LIBRARIES                                        =
# ==============================================================================

find_library(systemc SYSTEMC_LIB)
link_libraries("$SYSTEMC_LIB")

# ==============================================================================
# =                           ADDING SUBDIRECTORIES                            =
# ==============================================================================

add_subdirectory(adder)
