cmake_minimum_required(VERSION 3.2.0)

project(PersonalTest)

# ==============================================================================
# =                           GCC/G++ FLAGS                                    =
# ==============================================================================

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2")
set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall -O2")

# ==============================================================================
# =                           LIBRARIES                                        =
# ==============================================================================

find_library(SYSTEMC_LIB systemc)
link_libraries("${SYSTEMC_LIB}")

# ==============================================================================
# =                           ADDING SUBDIRECTORIES                            =
# ==============================================================================

add_subdirectory(1_adder)
